--- a/style.css
+++ b/style.css
@@ -113,4 +113,52 @@ body::after {
   justify-content: center;
   align-items: center;
   text-decoration: none;
+}
+
+.second__section {
+  padding: 160px 105px;
+}
+
+.second__card {
+  height: 440px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  margin-bottom: 40px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+.second__card:nth-child(2) .second__content {
+  padding-left: 88px;
+  padding-right: 20px;
+}
+.second__card:nth-child(2) .second__img img {
+  right: -120px;
+  top: 4px;
+}
+.second__card:nth-child(3) .second__content {
+  padding-right: 15px;
+}
+
+.second__content {
+  padding-left: 120px;
+  position: relative;
+  top: 4px;
+}
+
+.second__tittle {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.55em;
+  margin-bottom: 12px;
+}
+
+.second__img img {
+  width: 407px;
+  position: relative;
+  right: -176px;
+  top: 4px;
+}
+
+.second__text {
+  line-height: 27px;
 }/*# sourceMappingURL=style.css.map */
