--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ body::after {
 
 .second__section {
   padding: 160px 105px;
+  padding-bottom: 306px;
 }
 
 .second__card {
@@ -161,4 +162,41 @@ body::after {
 
 .second__text {
   line-height: 27px;
+}
+
+.call {
+  position: relative;
+}
+
+.call__inner {
+  position: absolute;
+  width: 800px;
+  height: 280px;
+  margin: auto;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, 35%);
+  border-radius: 15px;
+  padding-top: 65px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.call__tittle {
+  font-size: 1.75em;
+  font-family: "Poppins", sans-serif;
+}
+
+.call__btn {
+  height: 80px;
+  width: 400px;
+  background-color: hsl(322deg, 100%, 66%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 700;
+  font-size: 1.1em;
+  border-radius: 40px;
 }/*# sourceMappingURL=style.css.map */
