--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ body::after {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  background-color: #fff;
 }
 
 .call__tittle {
@@ -227,6 +228,10 @@ body::after {
 .footer__column:nth-child(3) .footer__links {
   padding-left: 15px;
 }
+.footer__column:nth-child(4) {
+  padding: 80px 20px;
+  display: flex;
+}
 
 .footer__item {
   display: flex;
@@ -268,4 +273,26 @@ body::after {
 .footer__link {
   color: white;
   margin-bottom: 20px;
+}
+
+.footer__social {
+  display: flex;
+  width: 31px;
+  height: 31px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid;
+  border-radius: 30px;
+  margin-right: 13px;
+}
+
+.copy {
+  position: relative;
+  top: -2px;
+  font-size: 0.645em;
+  color: #fff;
+  margin: auto;
+  width: 1280px;
+  text-align: right;
+  font-family: "Poppins", sans-serif;
 }/*# sourceMappingURL=style.css.map */
