--- a/style.css
+++ b/style.css
@@ -9,19 +9,6 @@ body {
   font-size: 18px;
   font-family: "Open Sans", sans-serif;
   position: relative;
-  height: 3186px;
-}
-body::after {
-  position: absolute;
-  top: 0;
-  background-image: url(./design/desktop-design.jpg);
-  content: "";
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-  height: 100%;
-  pointer-events: none;
 }
 
 .container {
@@ -113,10 +100,16 @@ body::after {
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  transition: ease 0.2s;
+}
+.first__btn:hover {
+  background-color: #ff9bdb;
+  cursor: pointer;
+  transition: ease 0.2s;
 }
 
 .second__section {
-  padding: 160px 105px;
+  padding: 160px 0;
   padding-bottom: 306px;
 }
 
@@ -201,6 +194,12 @@ body::after {
   font-weight: 700;
   font-size: 1.1em;
   border-radius: 40px;
+  transition: ease 0.2s;
+}
+.call__btn:hover {
+  background-color: #ff9bdb;
+  cursor: pointer;
+  transition: ease 0.2s;
 }
 
 .footer {
@@ -273,6 +272,25 @@ body::after {
 .footer__link {
   color: white;
   margin-bottom: 20px;
+  position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.footer__link:before {
+  display: block;
+  transform: scaleX(0);
+  transition: transform 0.25s ease-in-out;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: white;
+}
+.footer__link:hover:before {
+  transform: scaleX(1);
 }
 
 .footer__social {
@@ -284,6 +302,15 @@ body::after {
   border: 1px solid;
   border-radius: 30px;
   margin-right: 13px;
+  transition: ease 0.2s;
+}
+.footer__social:hover {
+  cursor: pointer;
+  transition: ease 0.2s;
+  border-color: hsl(322deg, 100%, 66%);
+}
+.footer__social:hover svg path {
+  color: hsl(322deg, 100%, 66%);
 }
 
 .copy {
