--- a/style.scss
+++ b/style.scss
@@ -17,19 +17,6 @@ body {
   font-size: 18px;
   font-family: $bodyTypo;
   position: relative;
-  height: 3186px;
-  &::after {
-    position: absolute;
-    top: 0;
-    background-image: url(./design/desktop-design.jpg);
-    content: "";
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 0.5;
-    height: 100%;
-    pointer-events: none;
-  }
 }
 
 .container {
@@ -117,9 +104,15 @@ body {
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  transition: ease 0.2s;
+  &:hover {
+    background-color: #ff9bdb;
+    cursor: pointer;
+    transition: ease 0.2s;
+  }
 }
 .second__section {
-  padding: 160px 105px;
+  padding: 160px 0;
   padding-bottom: 306px;
 }
 .second__card {
@@ -202,6 +195,12 @@ body {
   font-weight: 700;
   font-size: 1.1em;
   border-radius: 40px;
+  transition: ease 0.2s;
+  &:hover {
+    background-color: #ff9bdb;
+    cursor: pointer;
+    transition: ease 0.2s;
+  }
 }
 
 .footer {
@@ -271,6 +270,25 @@ body {
 .footer__link {
   color: white;
   margin-bottom: 20px;
+  position: relative;
+  width: fit-content;
+  &:before {
+    display: block;
+    transform: scaleX(0);
+    transition: transform 0.25s ease-in-out;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: white;
+  }
+  &:hover {
+    &:before {
+      transform: scaleX(1);
+    }
+  }
 }
 
 .footer__social {
@@ -282,6 +300,18 @@ body {
   border: 1px solid;
   border-radius: 30px;
   margin-right: 13px;
+  transition: ease 0.2s;
+
+  &:hover {
+    cursor: pointer;
+    transition: ease 0.2s;
+    border-color: $Pink;
+    svg {
+      path {
+        color: $Pink;
+      }
+    }
+  }
 }
 .copy {
   position: relative;
