--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   top: -3px;
   font-weight: 700;
   font-size: 0.75em;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .header__btn:hover {
   cursor: pointer;
@@ -115,7 +116,7 @@ body {
 
 .second__card {
   height: 440px;
-  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   margin-bottom: 40px;
   border-radius: 10px;
   display: grid;
@@ -162,6 +163,7 @@ body {
 }
 
 .call__inner {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 15px 0px;
   position: absolute;
   width: 800px;
   height: 280px;
@@ -322,4 +324,116 @@ body {
   width: 1280px;
   text-align: right;
   font-family: "Poppins", sans-serif;
+}
+
+@media screen and (max-width: 1280px) {
+  .container,
+.copy {
+    width: 95%;
+  }
+  .second__img img {
+    width: 85%;
+    right: 0;
+  }
+}
+@media screen and (max-width: 800px) {
+  .first__section {
+    height: auto;
+    padding-bottom: 100px;
+  }
+  .first__section .container {
+    flex-wrap: wrap;
+  }
+  .first__content {
+    width: 100%;
+    text-align: center;
+    padding: 0 100px;
+  }
+  .first__text {
+    font-size: 1.5em;
+    line-height: 40px;
+    margin-top: 50px;
+    margin-bottom: 65px;
+  }
+  .first__btn {
+    width: 480px;
+    height: 80px;
+    border-radius: 60px;
+    margin: 0 auto;
+  }
+  .first__img {
+    width: 100%;
+  }
+  .first__img img {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .call__inner {
+    width: 95%;
+  }
+  .first__tittle {
+    margin-top: 255px;
+  }
+  .second__card {
+    height: auto;
+    grid-template-columns: 1fr;
+    padding: 100px;
+  }
+  .second__card:nth-child(2) .second__content {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .second__card:nth-child(2) .second__img img {
+    right: 0;
+    top: 4px;
+  }
+  .second__card:nth-child(3) .second__content {
+    padding-right: 15px;
+  }
+  .second__content {
+    order: 2;
+    padding: 0;
+    text-align: center;
+    margin-top: 115px;
+  }
+  .second__tittle {
+    font-size: 2.2em;
+  }
+  .second__text {
+    font-size: 1.5em;
+    line-height: 40px;
+  }
+  .second__img {
+    order: 1;
+  }
+  .second__img img {
+    width: 100%;
+    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .footer {
+    height: auto;
+  }
+  .footer .container {
+    grid-template-columns: 1fr;
+  }
+  .footer__column {
+    color: #fff;
+  }
+  .footer__column:first-child {
+    padding-right: 0;
+  }
+  .footer__column:nth-child(2) .footer__links {
+    padding-top: 80px;
+  }
+  .footer__column:nth-child(3) .footer__links {
+    padding-left: 0;
+  }
+  .footer__column:nth-child(4) {
+    padding: 0;
+  }
+  .footer__links {
+    padding: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
