--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 }
 .header__btn:hover {
   cursor: pointer;
+  color: hsl(208deg, 11%, 55%);
 }
 
 .logo svg {
@@ -54,6 +55,8 @@ body {
 
 .first__section {
   background-color: hsl(193deg, 100%, 96%);
+  background-image: url(./images/bg-hero-desktop.svg);
+  background-size: cover;
   height: 100vh;
 }
 .first__section .container {
@@ -80,11 +83,13 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 2.2em;
   margin-top: 110px;
+  color: hsl(192deg, 100%, 9%);
 }
 
 .first__text {
   margin-top: 30px;
   line-height: 27px;
+  color: hsl(192deg, 100%, 9%);
 }
 
 .first__btn {
@@ -326,6 +331,19 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.attribution {
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  color: white;
+  width: 100%;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(322deg, 100%, 66%);
+}
+
 @media screen and (max-width: 1280px) {
   .container,
 .copy {
@@ -337,8 +355,12 @@ body {
   }
 }
 @media screen and (max-width: 800px) {
+  .header .container {
+    padding: 20px 0;
+  }
   .first__section {
     height: auto;
+    background-image: url(./images/bg-hero-mobile.svg);
     padding-bottom: 100px;
   }
   .first__section .container {
@@ -372,7 +394,7 @@ body {
     width: 95%;
   }
   .first__tittle {
-    margin-top: 255px;
+    margin-top: 120px;
   }
   .second__card {
     height: auto;
@@ -458,7 +480,7 @@ body {
   }
   .first__tittle {
     font-size: 1.7em;
-    margin-top: 155px;
+    margin-top: 125px;
   }
   .first__text {
     font-size: 1.2em;
