--- a/style.scss
+++ b/style.scss
@@ -66,7 +66,7 @@ body {
   background-color: $VeryPaleCyan;
   background-image: url(./images/bg-hero-desktop.svg);
   background-size: cover;
-  height: 100vh;
+  height: 720px;
   .container {
     height: 100%;
     display: flex;
