--- a/style.scss
+++ b/style.scss
@@ -118,7 +118,7 @@ body {
   }
 }
 .second__section {
-  padding: 160px 0;
+  padding: 160px 25px;
   padding-bottom: 306px;
 }
 .second__card {
@@ -132,16 +132,21 @@ body {
   &:nth-child(2) {
     .second__content {
       padding-left: 88px;
-      padding-right: 20px;
+      padding-right: 55px;
     }
     .second__img img {
-      right: -120px;
-      top: 4px;
+      right: -122px;
+      top: 3px;
+      width: 415px;
     }
   }
   &:nth-child(3) {
     .second__content {
       padding-right: 15px;
+    }
+    .second__img img {
+      width: 420px;
+      right: -170px;
     }
   }
 }
@@ -153,6 +158,7 @@ body {
 
 .second__tittle {
   font-family: $headings;
+  color: $VeryDarkCyan;
   font-size: 1.55em;
   margin-bottom: 12px;
 }
@@ -164,6 +170,7 @@ body {
 }
 .second__text {
   line-height: 27px;
+  color: $GrayishBlue;
 }
 
 .call {
@@ -190,6 +197,7 @@ body {
   font-size: 1.75em;
   font-family: $headings;
   margin-bottom: -20px;
+  color: $VeryDarkCyan;
 }
 .call__btn {
   height: 80px;
@@ -211,7 +219,7 @@ body {
 }
 
 .footer {
-  height: 600px;
+  height: 560px;
   background-color: $VeryDarkCyan;
   .container {
     display: grid;
